# travel_mod

./: .gitignore  CMakeLists.txt  MixTxt.m  README.md  modify_file.py  rename.py
libsvm-3.21/: svm.h
libsvm-3.21/matlab/: make.m  savemodel.cpp
src/: .tags  .tags_sorted_by_file  call1.cpp  elm.cpp  elm.h  helper_timer.h  lbp.cpp  lbp.h  main.cpp  outputVote.cpp  ransac_plain.cpp  ransac_plain.h  readme.docx  slic.cpp  slic.h  svm-predict.c  svm-predict.cpp  svm-predict.h  tr_detect.cpp  tr_detect.h  train.cpp  train0319.model
src/cvblob/: cvblob2.cpp  cvblob2.h
src/gslic/: FastImgSeg.cpp  cudaDefines.h  cudaImgTrans.cu  cudaSegEngine.cu
